# ReleaseSphere

./: .replit  Pasted-Traceback-most-recent-call-last-File-home-runner-ReleaseSphere-pythonlibs-lib-python3-11-sit-1726643846791.txt  app.log.1  azure_devops_client.py  config.py  database.py  main.py  models.py  package.json  pyproject.toml
migrations/versions/: a56ce0650bc9_initial_migration.py
pages/: index.js
static/css/: styles.css
static/js/: dashboard.js
templates/: index.html  login.html  profile.html  register.html
